syntax = "proto2";

package yolov3;

message ClassLabel {
    required string class_name = 1;
    required int32 class_id = 2;
}

message ClassMap {
    repeated ClassLabel class_map = 1;
}
